# swagger-static/swagger.json
@@ -92,6 +92,16 @@
       "post": {
         "operationId": "AuthController_refreshTokens",
         "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/refreshTokensInterface"
+              }
+            }
+          }
+        },
         "responses": {
           "201": {
             "description": ""
@@ -929,6 +939,10 @@
           "certification"
         ]
       },
+      "refreshTokensInterface": {
+        "type": "object",
+        "properties": {}
+      },
       "TypeDetailInterface": {
         "type": "object",
         "properties": {
@@ -937,7 +951,7 @@
             "description": "detail_name"
           },
           "id_type_job": {
-            "type": "number",
+            "type": "string",
             "description": "id_type_job"
           },
           "image": {
@@ -960,7 +974,7 @@
             "description": "detail_name"
           },
           "id_type_job": {
-            "type": "number",
+            "type": "string",
             "description": "id_type_job"
           }
         },
@@ -1009,11 +1023,11 @@
             "description": "star"
           },
           "id_job_catalog": {
-            "type": "number",
+            "type": "string",
             "description": "id_job_catalog"
           },
           "id_creator": {
-            "type": "number",
+            "type": "string",
             "description": "id_creator"
           }
         },
@@ -1044,11 +1058,11 @@
         "type": "object",
         "properties": {
           "id_job": {
-            "type": "number",
+            "type": "string",
             "description": "id_job"
           },
           "id_user": {
-            "type": "number",
+            "type": "string",
             "description": "id_user"
           }
         },
@@ -1065,7 +1079,7 @@
             "description": "name_job_catalog"
           },
           "id_type_detail": {
-            "type": "number",
+            "type": "string",
             "description": "id_type_detail"
           }
         },
